--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <h1>Ryan Farley | WDD 130</h1>
         <img src="images/profile.jpg" alt="My profile picture: Ryan Farley"width="200">
-        <p>Hello!, I'm Ryan Farley, I live in Rosario, Argentina. I like reading, playing sports and listening to all kinds of music</p>
+        <p>Hello!, I'm Ryan Farley, I live in Rosario, Argentina. I like reading, playing sports and listening to all kinds of music.</p>
     </main>
     <footer>
         <p>©️2024 🌳 Ryan Farley  🌳 Rosario, Argentina</p>
