--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -32,7 +32,7 @@
             <section class="banner">
                 <img src="https://wallpaperaccess.com/full/4334508.png" alt="another image" width="200">
                 <h2>banner 3 title </h2>
-                <p>banner 3kk text paragraph</p>
+                <p>banner 3 text paragraph</p>
             </section>
         </div>
         <div id="products">
