--- a/week02/wireframe.html
+++ b/week02/wireframe.html
@@ -38,43 +38,43 @@
         <div id="products">
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product"width="100">
-                <h1>product 1</h1>
-                <p>what about it </p>
+                <h1>Product 1</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 2</h1>
-                <p>what about it </p>
+                <h1>Product 2</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 3</h1>
-                <p>what about it </p>
+                <h1>Product 3</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 4</h1>
-                <p>what about it </p>
+                <h1>Product 4</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 5</h1>
-                <p>what about it </p>
+                <h1>Product 5</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 6</h1>
-                <p>what about it </p>
+                <h1>Product 6</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 7</h1>
-                <p>what about it </p>
+                <h1>Product 7</h1>
+                <p>About it </p>
             </section>
             <section class="product">
                 <img src="https://i.imgflip.com/15s3hd.jpg" alt="product" width="100">
-                <h1>product 8</h1>
-                <p>what about it </p>
+                <h1>Product 8</h1>
+                <p>About it </p>
             </section>
         </div>
     </main>
