--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The purpose of this home page is to practice some techniques taught in WDD130">
+    <meta name="author" content="Ryan Farley">
     <title>Ryan Farley | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -19,6 +21,11 @@
         <img src="images/profile.jpg" alt="My profile picture: Ryan Farley"width="200">
         <p>Hello!, I'm Ryan Farley, I live in Rosario, Argentina. I like reading, playing sports and listening to all kinds of music.</p>
     </main>
+    <aside>
+        <h2>Argentina</h2>
+        <img src="https://3.bp.blogspot.com/-SYfpNXztMh8/VypJjwUykzI/AAAAAAABAuM/lueE2kVt-mI7DMias1dGaMpvDKcxJcPBwCLcB/s1600/monumento-bandera-2.jpg" alt="Flag monument">
+        <p>Argentina is located in south America, and it's the home of nearly 50 million people</p>
+    </aside>
     <footer>
         <p>©️2024 🌳 Ryan Farley  🌳 Rosario, Argentina</p>
     </footer>
