--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -24,11 +24,8 @@
         <img src="images/logo4_200.png" alt="Rafting Site Logo">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
-        <p>primary-#CAD2C5 <p> 
-        </p>secondary-#84A98C
-        <p></p>accent1-#354F52
-        <p></p>accent2-#52796F
-        <p></p>Palette URL <a href="https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46" target="_blank">https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46</a></p>
+        <p>primary-#CAD2C5, secondary-#84A98C, accent1-#354F52,accent2-#52796F </p>
+        <p>Palette URL <a href="https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46" target="_blank">https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46</a></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
         <p>Kaushan script/Script Fonts<p></p>Example text - Lorem ipsum</p>
