--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -28,7 +28,7 @@
         <p>Palette URL <a href="https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46" target="_blank">https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46</a></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
-        <p>Kaushan script/Script Fonts<p></p>Example text - Lorem ipsum</p>
+        <p>Kaushan script/Script Fonts Example text - Lorem ipsum</p>
         <h4>Normal Text/Paragraph Example Font</h4>
         <p>Lobster 2/ Script Fonts<p></p>Example text - Lorem ipsum</p>
         <h4>Colored Callout Example font</h4>
@@ -42,9 +42,9 @@
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
-        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wrr-wireframe-home.png" alt="Home Page Wireframe Example Design"width="700">
+        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wrr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
         <h3>About Us Page Wireframe</h3>
-        <img src="https://byui.cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design"width="700"> 
+        <img src="https://byui.cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700"> 
     </main>
     <footer>
                 <p>©️2024 🌳Rafting Site Document 🌳 Ryan Farley 🌳 WDD 130</p>
