--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -16,23 +16,30 @@
     <main>
         <h2>Overview</h2>
         <h3>Purpose</h3>
-        <p>The purpose of our company is to provide the best possible rafting experience to our clients, as well as simplifying the planning of it.</p>
+        <p>The purpose of our company is to provide the best possible rafting experience to our clients, as well as simplifying
+            the planning of it.</p>
         <h3>Audience</h3>
-        <p>Are you retired, in school break, or simply a lover of nature and an adventure? Are you looking to get to know yourself better, or have a fun experience with friends? Do you want to get all this, without worrying to much?, then water rafting is an excellent choice, and no one handles it better than us! </p>
+        <p>Are you retired, in school break, or simply a lover of nature and an adventure? Are you looking to get to know
+            yourself better, or have a fun experience with friends? Do you want to get all this, without worrying too much? Then
+            water rafting is an excellent choice, and no one handles it better than us!</p>
         <h2>Branding</h2>
         <h3>Website Logo</h3>
         <img src="images/logo4_200.png" alt="Rafting Site Logo">
         <h2>Style Guide</h2>
         <h3>Color Palette</h3>
-        <p>primary-#CAD2C5, secondary-#84A98C, accent1-#354F52,accent2-#52796F </p>
-        <p>Palette URL <a href="https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46" target="_blank">https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46</a></p>
+        <p>Primary: #CAD2C5, Secondary: #84A98C, Accent 1: #354F52, Accent 2: #52796F</p>
+        <p>Palette URL: <a href="https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46"
+                target="_blank">https://coolors.co/palette/cad2c5-84a98c-52796f-354f52-2f3e46</a></p>
         <h3>Typography</h3>
         <h4>Headings Example Font</h4>
-        <p>Kaushan script/Script Fonts Example text - Lorem ipsum</p>
+        <p>Kaushan Script / Script Fonts</p>
+        <p>Example text - Lorem ipsum</p>
         <h4>Normal Text/Paragraph Example Font</h4>
-        <p>Lobster 2/ Script Fonts<p></p>Example text - Lorem ipsum</p>
-        <h4>Colored Callout Example font</h4>
-        <p>Lobster 2 /Script Fonts<p></p>Example text - Lorem ipsum</p>
+        <p>Lobster 2 / Script Fonts</p>
+        <p>Example text - Lorem ipsum</p>
+        <h4>Colored Callout Example Font</h4>
+        <p>Lobster 2 / Script Fonts</p>
+        <p>Example text - Lorem ipsum</p>
         <h3>Navigation</h3>
         <nav>
             <a href="#">Home</a>
