--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <h1>Ryan Farley | WDD 130</h1>
         <img src="images/profile.jpg" alt="My profile picture: Ryan Farley" width="200">
         <p>Hello!, I'm Ryan Farley, I live in Rosario, Argentina. I like reading, playing sports and listening to all kinds of music.</p>
+<ul>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple"
+            target="_blank">San Diego California Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/temples/details/tallahassee-florida-temple" target="_blank">Tallahassee Florida
+            Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/temples/details/reno-nevada-temple" target="_blank">Reno Nevada Temple</a></li>
+</ul>
     </main>
     <aside>
         <h2>Argentina</h2>
@@ -30,4 +37,5 @@
         <p>©️2024 🌳 Ryan Farley  🌳 Rosario, Argentina</p>
     </footer>
 </body>
+<!--Last modified, Oct 5, 2023-->
 </html>
