--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Ryan Farley | WDD 130</h1>
         <img src="images/profile.jpg" alt="My profile picture: Ryan Farley" width="200">
         <p>Hello!, I'm Ryan Farley, I live in Rosario, Argentina. I like reading, playing sports and listening to all kinds of music.</p>
-<ul>
+<ul class="box">
     <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple"
             target="_blank">San Diego California Temple</a></li>
     <li><a href="https://www.churchofjesuschrist.org/temples/details/temples/details/tallahassee-florida-temple" target="_blank">Tallahassee Florida
@@ -28,7 +28,7 @@
     <li><a href="https://www.churchofjesuschrist.org/temples/details/temples/details/reno-nevada-temple" target="_blank">Reno Nevada Temple</a></li>
 </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Argentina</h2>
         <img src="https://3.bp.blogspot.com/-SYfpNXztMh8/VypJjwUykzI/AAAAAAABAuM/lueE2kVt-mI7DMias1dGaMpvDKcxJcPBwCLcB/s1600/monumento-bandera-2.jpg" alt="Flag monument">
         <p>Argentina is located in south America, and it's the home of nearly 50 million people</p>
