--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="description"content="The about site includes important information about the whole website .">
+    <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
