--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Ryan Farley </title>
-    <meta name="description"content="The about site includes important information about the whole website .">
+    <title>About Us | Ryan Farley</title>
+    <meta name="description" content="The about site includes important information about the whole website.">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
+
 <body>
     <header>
         <img src="images/logo4_200.png" alt="Rafting logo">
         <nav>
-            <a href="">index.html</a>
-            <a href="">about.html</a>
-            <a href="">trips.html</a>
-            <a href="">contact.html</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
-        <div class="">
+        <div>
             <img src="images/rafting11_1024.jpg" alt="People doing rafting">
             <h1>BlueWave Rafting Tours</h1>
             <article>
                 <img src="images/happy-client.png" alt="Happy client">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero perferendis vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima accusamus, corrupti nemo similique.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero perferendis
+                    vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima accusamus,
+                    corrupti nemo similique.</p>
             </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa labore dolores rem natus officiis unde explicabo qui quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus officia.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa labore dolores rem natus officiis unde
+                explicabo qui quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus
+                officia.</p>
         </section>
         <section>
             <h2>Adventure Awaits You</h2>
-            <img src="images/littlecolorado.jpg" alt="littlecolorado">
-            <img src="images/nice-place.jpg" alt="nice-place">
-            <img src="images/red-wall.jpg" alt="red-wall">
-            <img src="images/river-evening.jpg" alt="river-evening">
-            <img src="images/jungle-rafting.jpg" alt="jungle-rafting">
+            <img src="images/littlecolorado.jpg" alt="Little Colorado">
+            <img src="images/nice-place.jpg" alt="Nice Place">
+            <img src="images/red-wall.jpg" alt="Red Wall">
+            <img src="images/river-evening.jpg" alt="River Evening">
+            <img src="images/jungle-rafting.jpg" alt="Jungle Rafting">
         </section>
     </main>
     <footer>
@@ -47,13 +53,13 @@
                 <img src="images/facebook.png" alt="Facebook">
             </a>
             <a href="https://www.google.com/gmail/about/">
-                <img src="images/gmail.png" alt="gmail">
+                <img src="images/gmail.png" alt="Gmail">
             </a>
             <a href="https://instagram.com">
                 <img src="images/instagram.png" alt="Instagram">
             </a>
         </nav>
     </footer>
-
 </body>
+
 </html>
