--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Ryan Farley</title>
-    <meta name="description" content="The about site includes important information about the whole website.">
+    <meta name="description" content="">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
