--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,8 +21,8 @@
         </nav>
     </header>
     <main>
-        <div>
-            <img src="images/rafting11_1024.jpg" alt="People doing rafting">
+        <div class="Hero">
+            <img src="images/rafting11_1024.jpg" alt="Hero image">
             <h1>BlueWave Rafting Tours</h1>
             <article>
                 <img src="images/happy-client.png" alt="Happy client">
