--- a/wwr/about.html
+++ b/wwr/about.html
@@ -20,32 +20,37 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <main>
-        <div class="Hero">
-            <img src="images/rafting11_1024.jpg" alt="Hero image">
-            <h1>BlueWave Rafting Tours</h1>
-            <article>
-                <img src="images/happy-client.png" alt="Happy client">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero perferendis
-                    vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima accusamus,
-                    corrupti nemo similique.</p>
-            </article>
-        </div>
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa labore dolores rem natus officiis unde
-                explicabo qui quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus
-                officia.</p>
-        </section>
-        <section>
-            <h2>Adventure Awaits You</h2>
-            <img src="images/littlecolorado.jpg" alt="Little Colorado">
-            <img src="images/nice-place.jpg" alt="Nice Place">
-            <img src="images/red-wall.jpg" alt="Red Wall">
-            <img src="images/river-evening.jpg" alt="River Evening">
-            <img src="images/jungle-rafting.jpg" alt="Jungle Rafting">
-        </section>
-    </main>
+    <div class="grid">
+        <main>
+            <div class="Hero">
+                <img src="images/rafting11_1024.jpg" alt="Hero image">
+                <h1>BlueWave Rafting Tours</h1>
+                <article>
+                    <img src="images/happy-client.png" alt="Happy client">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero
+                        perferendis vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima
+                        accusamus, corrupti nemo similique.</p>
+                </article>
+            </div>
+            <section>
+                <h2>History</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur. Culpa labore dolores rem natus officiis unde explicabo qui
+                    quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus officia.
+                </p>
+            </section>
+            <section>
+                <h2>Adventure Awaits You</h2>
+                <img src="images/littlecolorado.jpg" alt="Little Colorado">
+                <img src="images/nice-place.jpg" alt="Nice Place">
+                <img src="images/red-wall.jpg" alt="Red Wall"> 
+                <img src="images/river-evening.jpg" alt="River Evening">
+                <img src="images/jungle-rafting.jpg" alt="Jungle Rafting">
+            </section>
+        </main>
+        <aside>
+
+        </aside>
+    </div>
     <footer>
         <p>&copy; 2023 BlueWave Rafting Tours, Inc. | Created by Ryan Farley</p>
         <nav class="sociallinks">
