--- a/index.html
+++ b/index.html
@@ -18,27 +18,29 @@
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
-    <main>
-        <h1>Ryan Farley | WDD 130</h1>
-        <img src="images/profile.jpg" alt="My profile picture: Ryan Farley" width="200">
-        <p>Hello! I'm Ryan Farley. I live in Rosario, Argentina. I like reading, playing sports, and listening to all
-            kinds of music.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple"
-                    target="_blank">San Diego California Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/tallahassee-florida-temple"
-                    target="_blank">Tallahassee Florida
-                    Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/reno-nevada-temple" target="_blank">Reno
-                    Nevada Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Argentina</h2>
-        <img src="https://3.bp.blogspot.com/-SYfpNXztMh8/VypJjwUykzI/AAAAAAABAuM/lueE2kVt-mI7DMias1dGaMpvDKcxJcPBwCLcB/s1600/monumento-bandera-2.jpg"
-            alt="Flag monument">
-        <p>Argentina is located in South America, and it's the home of nearly 50 million people.</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Ryan Farley | WDD 130</h1>
+            <img src="images/profile.jpg" alt="My profile picture: Ryan Farley" width="200">
+            <p>Hello! I'm Ryan Farley. I live in Rosario, Argentina. I like reading, playing sports, and listening to all
+                kinds of music.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple"
+                        target="_blank">San Diego California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/tallahassee-florida-temple"
+                        target="_blank">Tallahassee Florida
+                        Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/reno-nevada-temple" target="_blank">Reno
+                        Nevada Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+    </div>
+            <h2>Argentina</h2>
+            <img src="https://3.bp.blogspot.com/-SYfpNXztMh8/VypJjwUykzI/AAAAAAABAuM/lueE2kVt-mI7DMias1dGaMpvDKcxJcPBwCLcB/s1600/monumento-bandera-2.jpg"
+                alt="Flag monument">
+            <p>Argentina is located in South America, and it's the home of nearly 50 million people.</p>
+        </aside>
     <footer>
         <p>&copy; 2024 🌳 Ryan Farley 🌳 Rosario, Argentina</p>
     </footer>
