--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </ul>
         </main>
         <aside class="box">
-    </div>
+        </grid>
             <h2>Argentina</h2>
             <img src="https://3.bp.blogspot.com/-SYfpNXztMh8/VypJjwUykzI/AAAAAAABAuM/lueE2kVt-mI7DMias1dGaMpvDKcxJcPBwCLcB/s1600/monumento-bandera-2.jpg"
                 alt="Flag monument">
