--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-    <header>
-        <img src="images/logo4_200.png" alt="Rafting logo">
+    <header class="grid-header">
+        <img src="images/logo4_200.png" alt="Rafting logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -20,49 +20,55 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <div class="grid">
-        <main>
-            <div class="Hero">
-                <img src="images/rafting11_1024.jpg" alt="Hero image">
-                <h1>BlueWave Rafting Tours</h1>
-                <article>
-                    <img src="images/happy-client.png" alt="Happy client">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero
-                        perferendis vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima
-                        accusamus, corrupti nemo similique.</p>
-                </article>
+    <main>
+        <div class="Hero">
+            <img src="images/rafting11_1024.jpg" alt="Hero image">
+            <h1>BlueWave Rafting Tours</h1>
+            <article>
+                <img src="images/happy-client.png" alt="Happy client">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero perferendis
+                    vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima accusamus,
+                    corrupti nemo similique.</p>
+            </article>
+        </div>
+        <section class="history">
+            <h2>History</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa labore dolores rem natus officiis unde
+                explicabo qui quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus
+                officia.</p>
+        </section>
+        <section class="adventures">
+            <h2>Adventure Awaits You</h2>
+            <div class="adventure-grid">
+                <figure>
+                    <img src="images/littlecolorado.jpg" alt="Little Colorado">
+                    <figcaption>Little Colorado</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/nice-place.jpg" alt="Nice Place">
+                    <figcaption>Columbia river</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/red-wall.jpg" alt="Red Wall">
+                    <figcaption>The red wall</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/river-evening.jpg" alt="River Evening">
+                    <figcaption>Evening</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/jungle-rafting.jpg" alt="Jungle Rafting">
+                    <figcaption>Amazonas</figcaption>
+                </figure>
             </div>
-            <section>
-                <h2>History</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur. Culpa labore dolores rem natus officiis unde explicabo qui
-                    quibusdam sunt quasi nisi facilis expedita ab odit tenetur impedit, laboriosam repellendus officia.
-                </p>
-            </section>
-            <section>
-                <h2>Adventure Awaits You</h2>
-                <img src="images/littlecolorado.jpg" alt="Little Colorado">
-                <img src="images/nice-place.jpg" alt="Nice Place">
-                <img src="images/red-wall.jpg" alt="Red Wall"> 
-                <img src="images/river-evening.jpg" alt="River Evening">
-                <img src="images/jungle-rafting.jpg" alt="Jungle Rafting">
-            </section>
-        </main>
-        <aside>
-
-        </aside>
-    </div>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2023 BlueWave Rafting Tours, Inc. | Created by Ryan Farley</p>
         <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="Facebook">
-            </a>
-            <a href="https://www.google.com/gmail/about/">
-                <img src="images/gmail.png" alt="Gmail">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="Instagram">
-            </a>
+            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
+            <a href="https://www.google.com/gmail/about/"><img src="images/gmail.png" alt="Gmail"></a>
+            <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
         </nav>
     </footer>
 </body>
