--- a/wwr/about.html
+++ b/wwr/about.html
@@ -50,7 +50,7 @@
                 </figure>
                 <figure>
                     <img src="images/red-wall.jpg" alt="Red Wall">
-                    <figcaption>The red wall</figcaption>
+                    <figcaption>Red wall</figcaption>
                 </figure>
                 <figure>
                     <img src="images/river-evening.jpg" alt="River Evening">
