--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
+        <meta name="description" content="">
+        <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 
