--- a/quiz.html
+++ b/quiz.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML and CSS Quiz</title>
-        <meta name="description" content="">
-        <meta name="author" content="Ryan Farley">
+    <meta name="description" content="quiz page">
+    <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 
 <body>
+    <h1></h1>
     <form action="quiz_submit.php" method="post">
         <fieldset>
             <legend>HTML and CSS Quiz</legend>
