--- a/quiz.html
+++ b/quiz.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-    <h1></h1>
+    <h1>Quiz</h1>
     <form action="quiz_submit.php" method="post">
         <fieldset>
-            <legend>HTML and CSS Quiz</legend>
 
             <label for="q1">What does the acronym HTML stand for?</label>
             <input type="text" name="q1" id="q1" required>
