--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact us | Ryan Farley</title>
-    <meta name="description" content="How to reach out to us">
+    <title>Contact BlueWave Rafting Tours | Ryan Farley</title>
+    <meta name="description" content="">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
@@ -40,7 +40,7 @@
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        
+
 
         <form action="contact_submit.php" method="post">
             <label for="name">Your Name:</label>
