--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact | BlueWave Rafting Tours</title>
+    <title>Contact BlueWave Rafting Tours | Ryan Farley </title>
     <meta name="description" content="">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
