--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact BlueWave Rafting Tours | Ryan Farley </title>
+    <title>Contact BlueWave Rafting Tours | Ryan Farley</title>
     <meta name="description" content="">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -40,6 +40,21 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
+        <div class="employee-profile">
+            <img src="URL_FOR_EMPLOYEE_1_IMAGE" alt="Employee 1">
+            <p>Employee 1, Job Title</p>
+        </div>
+
+        <div class="employee-profile">
+            <img src="URL_FOR_EMPLOYEE_2_IMAGE" alt="Employee 2">
+            <p>Employee 2, Job Title</p>
+        </div>
+
+        <div class="employee-profile">
+            <img src="URL_FOR_EMPLOYEE_3_IMAGE" alt="Employee 3">
+            <p>Employee 3, Job Title</p>
+        </div>
+
         <form action="contact_submit.php" method="post">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
@@ -73,7 +88,7 @@
         <p>&copy; 2023 BlueWave Rafting Tours, Inc. | Created by Ryan Farley</p>
         <nav class="sociallinks">
             <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://www.google.com/gmail/about/"><img src="images/gmail.png" alt="Gmail"></a>
+            <a href="https://mail.google.com"><img src="images/gmail.png" alt="Gmail"></a>
             <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
         </nav>
     </footer>
