--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -59,7 +59,7 @@
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="email">Your Email Address:</label>
+            <label for "email">Your Email Address:</label>
             <input type="email" id="email" name="email" required>
 
             <fieldset>
