--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact BlueWave Rafting Tours | Ryan Farley</title>
+    <title>Contact Us BlueWave Rafting Tours | Ryan Farley</title>
     <meta name="description" content="">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
@@ -37,7 +37,7 @@
         <div class="map">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d262612.6276251324!2d-54.383286021570235!3d-2.333884277305804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1698068813032!5m2!1ses!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                width="600" height="450" style="border:0;" allowfullscreen loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="employee-profile">
@@ -50,7 +50,7 @@
             <p>Employee 2, Job Title</p>
         </div>
 
-        <div class="employee-profile">
+        <div class "employee-profile">
             <img src="URL_FOR_EMPLOYEE_3_IMAGE" alt="Employee 3">
             <p>Employee 3, Job Title</p>
         </div>
@@ -59,7 +59,7 @@
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" required>
 
-            <label for "email">Your Email Address:</label>
+            <label for="email">Your Email Address:</label>
             <input type="email" id="email" name="email" required>
 
             <fieldset>
