--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -60,7 +60,7 @@
             <input type="text" id="name" name="name" required>
 
             <label for="email">Your Email Address:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="text" id="email" name="email" required>
 
             <fieldset>
                 <legend>Purpose of the Message:</legend>
