--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -50,7 +50,7 @@
             <p>Employee 2, Job Title</p>
         </div>
 
-        <div class "employee-profile">
+        <div class="employee-profile"> <!-- Corrected a typo -->
             <img src="URL_FOR_EMPLOYEE_3_IMAGE" alt="Employee 3">
             <p>Employee 3, Job Title</p>
         </div>
@@ -60,7 +60,7 @@
             <input type="text" id="name" name="name" required>
 
             <label for="email">Your Email Address:</label>
-            <input type="text" id="email" name="email" required>
+            <input type="email" id="email" name="email" required> <!-- Corrected the input type for email -->
 
             <fieldset>
                 <legend>Purpose of the Message:</legend>
