--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -15,7 +15,7 @@
         <img src="images/logo4_200.png" alt="Rafting logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="about us.html">About us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -31,8 +31,65 @@
                     corrupti nemo similique.</p>
             </article>
         </div>
-        
+        <div>
+            <img src="images/san-Francisco-river.jpg" alt="san francisco river">
+            <p>The San Francisco River, nestled in the heart of nature's beauty, offers an exhilarating rafting
+                adventure through
+                pristine waters, lush canyons, and breathtaking landscapes. Brace yourself for an unforgettable journey
+                on this untamed
+                river, where every ripple tells a story of adventure and exploration.</p>
+        </div>
+        <div>
+            <img src="images/Kayaking-Tour-to-Upper-Amazon-River.webp" alt="upper amazon river">
+            <p>Embark on a thrilling rafting expedition on the Upper Amazon River, a pristine waterway that winds
+                through the heart of
+                the Amazon rainforest. Encounter lush jungles, exotic wildlife, and ancient mysteries as you navigate
+                its powerful
+                currents. Get ready for an unforgettable journey into the heart of the world's largest and most
+                biodiverse wilderness.</p>
+        </div>
+        <div>
+            <img src="images/Rio-Negro-3.jpg" alt="rio negro">
+            <p>Embark on an exciting rafting journey through the Rio Negro River in Argentina. This river's
+                crystal-clear waters carve
+                their path through stunning landscapes, with dramatic canyons and lush forests surrounding you. As you
+                navigate its
+                rapids, you'll witness the untouched beauty of Patagonia and the Andes mountains. Get ready for an
+                adrenaline-pumping
+                adventure in one of Argentina's most breathtaking natural settings.</p>
+        </div>
 
+        <table>
+            <caption>Available Rafting Trips</caption>
+            <thead>
+                <tr>
+                    <th>Trip Name</th>
+                    <th>Location</th>
+                    <th>Duration</th>
+                    <th>Difficulty</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>San Francisco Adventure</td>
+                    <td>San Francisco River, USA</td>
+                    <td>2 days</td>
+                    <td>Intermediate</td>
+                </tr>
+                <tr>
+                    <td>Amazon Rainforest Expedition</td>
+                    <td>Upper Amazon River, Brazil</td>
+                    <td>5 days</td>
+                    <td>Advanced</td>
+                </tr>
+                <tr>
+                    <td>Patagonian Wilderness</td>
+                    <td>Rio Negro River, Argentina</td>
+                    <td>3 days</td>
+                    <td>Intermediate</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
         <p>&copy; 2023 BlueWave Rafting Tours, Inc. | Created by Ryan Farley</p>
