--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,7 @@
         <img src="images/logo4_200.png" alt="Rafting logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about us.html">About us</a>
+            <a href="about-us.html">About us</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
@@ -26,8 +26,8 @@
             <h1>BlueWave Rafting Tours</h1>
             <article>
                 <img src="images/happy-client.png" alt="Happy client">
-                <p>Experience the thrill of a lifetime with BlueWave Rafting Tours! Join us for heart-pounding adventures on the wildest
-                rivers. Book your unforgettable journey today.</p>
+                <p>Experience the thrill of a lifetime with BlueWave Rafting Tours! Join us for heart-pounding
+                    adventures on the wildest rivers. Book your unforgettable journey today.</p>
             </article>
         </div>
 
@@ -35,7 +35,8 @@
             <div class="grid-item">
                 <img src="images/1.jpeg" alt="Rafting Image 1">
                 <h2>Our Purpose</h2>
-                <p>To provide safe, exhilarating, and nature-immersed white water rafting experiences for adventurers of all levels.</p>
+                <p>To provide safe, exhilarating, and nature-immersed white water rafting experiences for adventurers of
+                    all levels.</p>
             </div>
 
             <div class="grid-item">
