--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,7 +15,7 @@
         <img src="images/logo4_200.png" alt="Rafting logo" class="logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
+            <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
         </nav>
