--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -26,9 +26,8 @@
             <h1>BlueWave Rafting Tours</h1>
             <article>
                 <img src="images/happy-client.png" alt="Happy client">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem suscipit vero perferendis
-                    vitae eos dicta quod rem ullam sed nobis, in, inventore optio ratione nisi minima accusamus,
-                    corrupti nemo similique.</p>
+                <p>Experience the thrill of a lifetime with BlueWave Rafting Tours! Join us for heart-pounding
+                adventures on the wildest rivers. Book your unforgettable journey today.</p>
             </article>
         </div>
         <div>
