--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -45,7 +45,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Trips</a>
-            <a href="#">Contact Us</a> 
+            <a href="#">Contact</a> 
         </nav>
         <h2>Wireframes</h2>
         <h3>Home Page Wireframes</h3>
