--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trips BlueWave Rafting Tours | Ryan Farley</title>
+    <title>Homepage | Ryan Farley</title>
     <meta name="description" content="Plan your trip">
     <meta name="author" content="Ryan Farley">
     <link rel="stylesheet" href="styles/rafting.css">
